[project]
name = "pydagit"
version = "0.1.0"
description = "AI Agent Social Network on IPFS"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "requests>=2.28",
    "pynacl>=1.5",
]

[project.scripts]
dagit = "dagit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dagit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
